updated orbit overflow issue

--- a/css/foundation.css
+++ b/css/foundation.css
@@ -2555,7 +2555,9 @@ a.th {
     margin: 0;
     padding: 0;
     position: relative;
-    height: 408px}
+    width: 100%;
+    height: 408px;
+    overflow: hidden;}
 .orbit-container .orbit-slides-container img {
     display: block;
     max-width: 100%; }
